@@ -5,6 +5,7 @@ core:
 
 === Edge
 
+* Jeff Casimir
 * Mario Visic
 * Mark Reginald James
 * Andrew O'Brian
